# nostdlib

./: .clangd  .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  README.md  conanfile.py
include/nostdlib/: bits.h  buf.h  char.h  dynamic_array.h  io.h  limits.h  macros.h  memory.h  platform.h  rc.h  string.h  sys.h  types.h  version.h
include/nostdlib/_internal/fmt/: helpers.h  parser.h  sscanf.h
include/nostdlib/_internal/fmt/sprintf/: impls.h
include/nostdlib/math/: mod.h  round.h
include/nostdlib/numeric/: abs.h  countdigits.h  flt_charcount.h  from_str.h  to_str.h
include/nostdlib/sys/: posix.h
make/: detect-os.mk  os.mk  platform.mk
src/: abs.c  buf.c  char.c  countdigits.c  dynamic_array.c  flt_charcount.c  from_str.c  io.c  memory.c  string.c  sys.c  to_str.c
src/fmt/: helpers.c  parser.c  sscanf.c
src/fmt/sprintf/: impls.c
src/math/: mod.c  round.c
tests/: test_insert.c  test_memchr.c  test_memcmp.c  test_memcpy.c  test_memory.c  test_memset.c  test_numeric.c  test_sprintf.c  test_sscanf.c  test_strchr.c  test_strcspn.c  test_strerror.c  test_strlen.c  test_strncat.c  test_strncmp.c  test_strncpy.c  test_strpbrk.c  test_strrchr.c  test_strspn.c  test_strstr.c  test_strtok.c  test_to_lower.c  test_to_upper.c  test_trim.c
